Closed Bug 591430 Opened 15 years ago Closed 15 years ago

Reflect.parse(): TOK_NAME statement nodes with pn_lexdef

Categories

(Core :: JavaScript Engine, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: dherman, Assigned: dherman)

References

Details

(Whiteboard: fixed-in-tracemonkey)

Attachments

(1 file)

js> Reflect.parse("function f() { function g() { } function g() { } }") Assertion failure: unexpected statement type, at ../jsreflect.cpp:1899 Segmentation fault
Attachment #469960 - Flags: review?(cdleary)
Comment on attachment 469960 [details] [diff] [review] follow the pn_lexdef link to find the real parse node This fix looks correct, but there are probably some more def/use chain crashers lurking: 'Reflect.parse("function f(g) { function g() { } function g() { } }' asserts out for me.
Attachment #469960 - Flags: review?(cdleary) → review+
With the patches applied, WFM. If you see other def/use chain issues, though, please let me know. Dave
Whiteboard: fixed-in-tracemonkey
> With the patches applied, WFM. Ah, the test case in comment 2 is a dup of bug 591437. With that bug's fix it works. Dave
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: