bug 591430, r=cdleary: Reflect.parse(): TOK_NAME statement nodes with pn_lexdef